@@ -256,7 +256,10 @@ Other Changes
 
 * LUCENE-2883: FunctionQuery, DocValues (and its impls), ValueSource (and its
   impls) and BoostedQuery have been consolidated into the queries module.  They
-  can now be found at o.a.l.queries.function. 
+  can now be found at o.a.l.queries.function.
+
+* SOLR-2027: FacetField.getValues() now returns an empty list if there are no
+  values, instead of null (Chris Male)
   
 Documentation
 ----------------------
